argocd/infra/cilium/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
spec:
  gatewayClassName: cilium
  addresses:
    - value: 10.10.8.100 # the ip of the load balancer service
      type: IPAddress
  listeners:
    - name: http
      protocol: HTTP
      hostname: "*.yanello.internal"
      port: 80
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
    - name: http-root
      protocol: HTTP
      hostname: "yanello.internal"
      port: 80
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
    - name: https
      protocol: HTTPS
      hostname: "*.yanello.internal"
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: cilium-ingress-cert
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
    - name: https-root
      protocol: HTTPS
      hostname: "yanello.internal"
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: cilium-ingress-cert
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: http-redirect
# spec:
#   parentRefs:
#     - name: cilium-gateway
#       sectionName: http
#   hostnames:
#     - "*.yanello.net"
#     - "yanello.net"
#   rules:
#     - filters:
#         - type: RequestRedirect
#           requestRedirect:
#             scheme: https
#             statusCode: 301
# ---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: gateway
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: gateway-api-cilium
#   minReplicas: 1
#   maxReplicas: 5
#   metrics:
#   - type: Resource
#     resource:
#       name: cpu
#       target:
#         type: Utilization
#         averageUtilization: 50
