argocd/infra/cilium/manifests/tlsPassthroughGateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-private-tls-gateway
  labels:
    external-dns.yanello.net/gateway: private
spec:
  gatewayClassName: cilium
  addresses:
    - value: 10.10.8.103
      type: IPAddress
  listeners:
    - name: truenas-tls-passthrough
      protocol: TLS
      hostname: "truenas.yanello.net"
      port: 443
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: external-services
