argocd/infra/cilium/manifests/httpRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/name: hubble-ui
  name: hubble-ui-httproute
spec:
  parentRefs:
    - name: cilium-private-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - hubble.yanello.net
  rules:
    - backendRefs:
        - name: hubble-ui
          kind: Service
          group: ""
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
