argocd/infra/cilium/manifests/publicGateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-public-gateway
spec:
  gatewayClassName: cilium
  addresses:
    - value: 10.10.8.101
      type: IPAddress
  listeners:
    - name: http
      protocol: HTTP
      hostname: "*.yanello.net"
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: http-root
      protocol: HTTP
      hostname: "yanello.net"
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      hostname: "*.yanello.net"
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: cilium-public
            group: ""
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: https-root
      protocol: HTTPS
      hostname: "yanello.net"
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: cilium-public
            group: ""
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect-public
  annotations:
    external-dns.kubernetes.io/controller: ignore
spec:
  parentRefs:
    - name: cilium-public-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      sectionName: http
    - name: cilium-public-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      sectionName: http-root
  hostnames:
    - "*.yanello.net"
    - "yanello.net"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
      matches:
        - path:
            type: PathPrefix
            value: /
